--- a/gameTrivia/tsconfig.app.json
+++ b/gameTrivia/tsconfig.app.json
@@ -3,7 +3,9 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": [
+      "offscreencanvas" //CANVAS PIXI JS
+    ]
   },
   "files": [
     "src/main.ts"
