--- a/gameTrivia/tsconfig.json
+++ b/gameTrivia/tsconfig.json
@@ -20,6 +20,7 @@
     "module": "ES2022",
     "useDefineForClassFields": false,
     "lib": ["ES2022", "dom"],
+    "strictPropertyInitialization": false, //PARA PIXI JS
     "types": ["jquery"],
     "typeRoots": ["node_modules/@types"]
   },
@@ -27,6 +28,7 @@
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
+    "allowSyntheticDefaultImports": true //PARA PIXI JS
   }
 }
