--- a/WebApiRest/WebApiRest.csproj
+++ b/WebApiRest/WebApiRest.csproj
@@ -14,11 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-    <Folder Include="Models\" />
-    <Folder Include="Data\" />
     <Folder Include="Utilities\" />
-    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\Content\Images\Complemento\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -28,13 +25,16 @@
     <Content Update="wwwroot\Content\Archivos\Sala\Reporte.xls">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Update="wwwroot\Content\Images\Complemento\_default.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Update="wwwroot\Content\Images\Logo\icono-d.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Update="wwwroot\Content\Images\Logo\logo-dm.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Update="wwwroot\Content\Images\Sala\default.png">
+    <Content Update="wwwroot\Content\Images\Sala\_default.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Update="wwwroot\homeRest.html">
